beetbasic.kpeg
%% name = BeetBasic

%% {
    attr_reader :ast
}

%% block = ast Block(body)
%% branch = ast Branch(expr)

period = "."
space = " "
indent = "    " | "\t"
newline = /(\r\n|\r|\n)/
bang = "!"
ALPHA = /[A-Za-z]/
DIGIT = /[0-9]/
ident = ALPHA+

#keywords
kw_if = "if"
kw_end = "end"
kw_fn = "fn"

#statements
STMT = (ident:i newline) {i}

#expressions
EXPR = ident

#blocks
BLOCK = (space|indent)* (IF:b ~block(b) | STMT+:b ~block(b))?
IF = kw_if space* EXPR:e space* newline BLOCK*:body kw_end ~branch(e)

root = STMT+:b {@ast = b}
